--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask
-smtplib
+Flask==2.1.1               # Framework web para Python
+python-dotenv==0.19.0      # Para carregar variáveis de ambiente do arquivo .env
+smtplib                    # Biblioteca para enviar emails (embora já esteja no Python padrão)
+requests                   # Biblioteca útil para fazer requisições HTTP (caso precise)
+Werkzeug==2.1.1            # Necessário para o Flask, geralmente já instalado automaticamente com Flask
 mercadopago==2.2.0
