--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-Flask==2.1.1
+Flask==2.2.0  # Ou uma versão mais recente que seja compatível com o Werkzueg atual
+Werkzeug==2.1.1
 python-dotenv==0.19.0
 requests==2.26.0
